--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@
   }
 
 
-  .btn-common:hover, 
+  .btn-common:hover,
   .btn-common:focus{
     outline: none;
     background: none;
@@ -255,8 +255,8 @@
   font-weight: 300;
 }
 
-#header .navbar-inverse .navbar-nav  li.active > a,  
-#header .navbar-inverse .navbar-nav  li.active > a:focus, 
+#header .navbar-inverse .navbar-nav  li.active > a,
+#header .navbar-inverse .navbar-nav  li.active > a:focus,
 #header .navbar-nav.navbar-right li > a:hover,
 .navbar-inverse .navbar-nav > .open > a {
   background-color: inherit;
@@ -315,7 +315,7 @@ ul.sub-menu {
 }
 
 .fa-angle-down{
-  padding-left: 5px; 
+  padding-left: 5px;
 }
 
 .scaleIn {
@@ -360,7 +360,7 @@ ul.sub-menu {
 
 #footer {
   padding-bottom: 75px;
-  background-image: url(../images/home/footer.png);
+  background-image: url(../images/home/footer1.png);
   background-repeat: repeat-x;
   background-position: bottom;
   background-size: contain;
@@ -453,7 +453,7 @@ ul.sub-menu {
   height: 40px;
 }
 
-.form-control:hover, 
+.form-control:hover,
 .form-control:focus{
   border-color: #d29948;
   outline: none;
@@ -475,7 +475,7 @@ ul.sub-menu {
   padding: 10px;
 }
 
-.btn-submit:hover, 
+.btn-submit:hover,
 .btn-submit:focus{
   color: #fff;
   outline: none;
@@ -494,6 +494,7 @@ ul.sub-menu {
 #home-slider {
   background: url(../images/home/slider-bg.png) 0 100% repeat-x;
   position: relative;
+  background-repeat: no-repeat;
 }
 
 #home-slider .main-slider {
@@ -513,38 +514,18 @@ ul.sub-menu {
   animation: fadeInLeftBig 700ms cubic-bezier(0.190,1.000,0.220,1.000) 200ms both;
 }
 
-#home-slider .slider-house {
+#home-slider .slider-truck {
   position: absolute;
   right: 0;
   bottom: 0;
 }
 
-.animate-in .slider-house {
+.animate-in .slider-truck {
   -webkit-animation: fadeInDown 700ms ease-in-out 200ms both;
   animation: fadeInDown 700ms ease-in-out 200ms both;
 }
 
-#home-slider .slider-circle1 {
-  position: absolute;
-  right: 430px;
-  bottom: 210px;
-}
 
-.animate-in .slider-circle1 {
-  -webkit-animation: bounceIn 500ms ease-in-out 900ms both;
-  animation: bounceIn 500ms ease-in-out 900ms both;
-}
-
-#home-slider .slider-circle2 {
-  position: absolute;
-  right: 420px;
-  bottom: 245px;
-}
-
-.animate-in .slider-circle2 {
-  -webkit-animation: bounceIn 500ms ease-in-out 1100ms both;
-  animation: bounceIn 500ms ease-in-out 1100ms both;
-}
 
 #home-slider .slider-cloud1 {
   position: absolute;
@@ -577,6 +558,17 @@ ul.sub-menu {
 .animate-in .slider-cloud3 {
   -webkit-animation: bounceIn 500ms ease-in-out 1700ms both;
   animation: bounceIn 500ms ease-in-out 1700ms both;
+}
+
+#home-slider .slider-chef {
+  position: absolute;
+  bottom: -15px;
+  left: 170px;
+}
+
+.animate-in .slider-chef {
+  -webkit-animation: bounceIn 800ms ease-in-out 1900ms both;
+  animation: bounceIn 800ms ease-in-out 1900ms both;
 }
 
 #home-slider .slider-sun {
@@ -633,7 +625,7 @@ ul.sub-menu {
 }
 
 
-#action, 
+#action,
 #page-breadcrumb {
   background-image: url(../images/home/tour-bg.png);
   background-color: #fbfafa;
@@ -738,7 +730,7 @@ ul.sub-menu {
 *******About Us Page******
 **************************/
 
-#action , 
+#action ,
 #page-breadcrumb{
   position: relative;
 }
@@ -753,7 +745,7 @@ ul.sub-menu {
 
 #company-information .padding-top{
   padding-top: 105px;
-  
+
 }
 
 .single-service img {
@@ -1012,7 +1004,7 @@ ul.elements li > i{
   height: 100%;
   background: rgba(137, 97, 46, 0.8);
   width: 100%;
-  text-align: center;  
+  text-align: center;
 }
 
 .portfolio-view .nav-pills {
@@ -1086,7 +1078,7 @@ ul.elements li > i{
   -webkit-box-shadow: none;
 }
 
-.portfolio-filter li a:hover, 
+.portfolio-filter li a:hover,
 .portfolio-filter li a:focus,
 .portfolio-filter li a.active {
   background: transparent;
@@ -1107,7 +1099,7 @@ ul.elements li > i{
 
 .portfolio-pagination{
   text-align: center;
-  
+
   padding-top: 40px;
   padding-bottom: 90px;
 }
@@ -1255,8 +1247,8 @@ Portfolio with right sidebar
 }
 
 .sidebar-item .media:last-child{
-  border-bottom: 0px solid #ececec;  
-  padding-bottom: 0; 
+  border-bottom: 0px solid #ececec;
+  padding-bottom: 0;
 }
 
 .sidebar-item .media:hover{
@@ -1432,7 +1424,7 @@ Portfolio Details
 .skills .navbar-default,
 .client .navbar-default{
   margin-left: 35px;
-  
+
 }
 
 .live-preview .btn-common{
@@ -1486,7 +1478,7 @@ Blog Default
 .post-overlay span{
   position: absolute;
   left: 50%;
-  bottom: 0; 
+  bottom: 0;
   margin-left: -60px;
   -webkit-animation: fadeInUp 400ms;
   animation: fadeInUp 400ms;
@@ -1508,7 +1500,7 @@ Blog Default
   font-size: 30px;
   color: #fff;
   background: transparent;
-  padding: 0; 
+  padding: 0;
   margin-left: 50px;
 }
 
@@ -1595,7 +1587,7 @@ Blog Default
 
 .post-content .post-author{
   margin-top: 0;
-  
+
 }
 
 .post-content  .post-author a{
@@ -1732,7 +1724,7 @@ Blog with right sidebar
 
 .audiojs .scrubber{
   background: #fff;
-  
+
   height: 8px;
   border-top: 0;
   width: 170px;
@@ -1753,7 +1745,7 @@ Blog with right sidebar
 
 .audiojs .time{
   display: none;
-  
+
 }
 
 .audiojs .progress{
@@ -1797,7 +1789,7 @@ Blog Details
 }
 
 span.stMainServices,
-span.stButton_gradient, 
+span.stButton_gradient,
 .stButton .chicklets{
   height:24px !important;
 }
@@ -1831,7 +1823,7 @@ span.stButton_gradient,
 
 .response-area h2{
   margin-top: 0;
-  
+
   margin-bottom: 0;
   border-bottom: 0;
   padding-bottom: 20px;
@@ -1916,7 +1908,7 @@ span.stButton_gradient,
   opacity: 0.9
 }
 
-#map-section .contact-info h2, 
+#map-section .contact-info h2,
 #map-section address a:hover {
   color: #a5732a
 }
@@ -1969,7 +1961,7 @@ span.stButton_gradient,
   text-align: center;
 }
 
-.single-price .plan-name { 
+.single-price .plan-name {
   background-color: #D4D4D4;
   color: #696969;
   font-size: 20px;
@@ -1978,7 +1970,7 @@ span.stButton_gradient,
   text-transform: capitalize;
 }
 
-.single-price .plan-price { 
+.single-price .plan-price {
   color: #696969;
   float: none;
   font-size: 14px;
@@ -2018,7 +2010,7 @@ span.stButton_gradient,
   margin-left: -110px;
 }
 
-.single-price ul li, 
+.single-price ul li,
 .single-table ul li {
   padding: 12px 18px;
   background-color: #f7f7f7;
@@ -2026,7 +2018,7 @@ span.stButton_gradient,
   color: #696969;
 }
 
-.single-price ul li span, 
+.single-price ul li span,
 .single-table ul li span {
   float: right;
 }
@@ -2126,9 +2118,9 @@ span.stButton_gradient,
   position: absolute;
   border-color: #c4c4c4 transparent transparent;
   border-style: solid;
-  border-width: 78px 130px 0;  
+  border-width: 78px 130px 0;
   height: 0;
-  left: 0; 
+  left: 0;
   top: -1px;
   width: 100%;
   z-index: -1;
@@ -2155,7 +2147,7 @@ span.stButton_gradient,
   background-color: #b07b2c
 }
 
-.highligh-table .btn-signup a, 
+.highligh-table .btn-signup a,
 .highligh-table .table-header h2 {
   color: #fff;
 }
@@ -2400,8 +2392,8 @@ span.stButton_gradient,
 
 #countdown li {
   float: left;
-  margin-right: 100px;  
-  color: #757575;  
+  margin-right: 100px;
+  color: #757575;
   font-weight: 300;
   font-size: 30px;
   position: relative;
@@ -2478,7 +2470,7 @@ span.stButton_gradient,
   padding-top: 90px;
 }
 
-#countdown li.angle-one span.minutes, 
+#countdown li.angle-one span.minutes,
 #countdown li.angle-one .minute {
   margin-left: 25px;
 }
