--- a/css/main.css
+++ b/css/main.css
@@ -1012,7 +1012,7 @@ ul.elements li > i{
 
 .portfolio-info h2 {
   font-size: 18px;
-  margin: 15px 0 0;
+  margin-top: 5px;
 }
 
 .portfolio-filter {
